fix indicator being overlapped (mobile portrait)

--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -1,23 +1,25 @@
 @import "../../stylesheets/variables/_all";
 
 :root {
-  --safari-mobile-nav-height: 5rem;
+  --mobile-nav-height: 5rem;
 }
 
 .navbar {
   display: flex;
   flex-direction: column;
-  height: var(--jumbo-padding-x);
-  
-  :global(.browser-safari) & {
-    height: var(--safari-mobile-nav-height);
-  }
+  height:var(--mobile-nav-height);
 }
 
 .top,
 .bottom {
   display: flex;
   flex-direction: row;
+}
+
+.bottom {
+  @include mq($phone-landscape) {
+    margin-top: .25rem;
+  }
 }
 
 .left,
